# pubg_rs

./: Cargo.toml  readme.md
src/: lib.rs
src/structs/: mod.rs
