[package]
name = "pubg-rs"
version = "0.0.1"
authors = ["1mZ1kk4d0"]
edition = "2021"
description = "beta public rust pubg api"
license = "MIT OR Apache-2.0"
keywords = ["rust", "lib", "pubg"]
respository = "https://github.com/1mZ1kk4d0/pubg_rs"
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}

